# c-sorting-algorithms

./: .gitignore  Makefile  README.md  benchmark.c  bubblesort.c  bubblesort.h  config.h  configure.ac
doc/: Makefile
man/: Makefile
script/: Makefile  Makefile.am  sorting-benchmark.sh
src/: Makefile  Makefile.am
src/benchmark/: Makefile  Makefile.am  benchmark.c
src/lib/: Makefile  Makefile.am  bubblesort.c  quicksort.c  quicksort.h
