#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([sorting-benchmark], [0.0.1], [sean@kennedy.software])
AM_INIT_AUTOMAKE(sorting-benchmark, 0.0.1)
AC_PROG_RANLIB
AC_CONFIG_SRCDIR([config.h.in])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile
                 doc/Makefile
                 man/Makefile
                 script/Makefile
                 src/Makefile
                 src/benchmark/Makefile
                 src/lib/Makefile])


# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL

# Checks for library functions.

AC_OUTPUT
